--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Jennifer Jiyue Wang
 description: M.S. Student from Stanford University
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: imges/jiyue.jpg
+avatar: https://farm8.staticflickr.com/7613/16744097410_03d60f66ef_s.jpg
 
 #
 # Flags below are optional
