--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ avatar: images/jiyue.jpg
 # Flags below are optional
 #
 
-thumbnail: images/thumbnail.png
+thumbnail: images/jiyue.jpg
 
 # Includes an icon in the footer for each username you enter
 footer-links:
