--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@ avatar: images/jiyue.jpg
 # Flags below are optional
 #
 
-thumbnail: images/thumbnail-small.png
+thumbnail: images/thumbnail.png
 
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
   email:
-  facebook: 
+  facebook: 100006593130805
   flickr:
   github: JenniferWang
   instagram:
